--- a/templates/book.html
+++ b/templates/book.html
@@ -108,6 +108,8 @@
                             <h4>Latest Uploads</h4>
                             <div class="col-md-12 col-sm-12 col-xs-12">
                                 <div class="single-blog">
+                                    
+                                    {% for latest in book_page %}
                                     <div class="single-blog-img">
                                         <a href="{{latest.get_absolute_url}}">
                                             {% if latest.cover %}
@@ -140,19 +142,47 @@
                                       </span>
                                 </div>
                             </div>
+                            {% endfor %}
                             <!-- End single blog -->
 
 
 
                             <div class="blog-pagination">
+                                {% comment %} {% if is_paginated %} {% endcomment %}
+                                {% if book_page.has_other_pages %}
                                 <ul class="pagination">
-                                    <li class="page-item"><a href="#" class="page-link">&lt;</a></li>
-                                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">&gt;</a></li>
+                                    {% if book_page.has_previous %}
+                                    {% comment %} {% if page_obj.has_previous %} {% endcomment %}
+                                    <li class="page-item"><a href="?page={{ book_page.previous_page_number }}" class="page-link">&lt;</a></li>
+                                    {% else %}
+                                    <li class="disabled page-item"><a href="" class="page-link">&lt;</a></li>
+                                    {% endif %}
+                                    {% if book_page.number|add:'-4' > 1 %}
+                                        <li class="page-item"><a href="?page={{ book_page.number|add:'-3' }}" class="page-link">&hellip;</a></li>
+                                    {% endif %}
+
+                                    {% for i in book_page.paginator.page_range %}
+                                    {% if book_page.number == i %}
+                                    <li class="page-item active"><a href="{{ i }}" class="page-link">{{ i }}</a></li>
+                                    {% elif i > book_page.number|add:'-3' and i < book_page.number|add:'3' %}
+                                    <li class="page-item"><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
+                                    {% endif %}
+                                    {% endfor %}
+                                    {% if book_page.paginator.num_pages > book_page.number|add:'4' %}
+                                        <li class="page-item"><a href="?page={{ book_page.number|add:'3' }}" class="page-link">&hellip;</a></li>
+                                    {% endif %}
+                                    {% comment %} <li class="page-item"><a href="#" class="page-link">2</a></li>
+                                    <li class="page-item"><a href="#" class="page-link">3</a></li> {% endcomment %}
+                                    {% if book_page.has_next %}
+                                    <li class="page-item"><a href="?page={{ book_page.next_page_number }}" class="page-link">&gt;</a></li>
+                                    {% else %}
+                                    <li class="disabled page-item"><a href="" class="page-link">&gt;</a></li>
+                                    {% endif %}
                                 </ul>
+                                {% endif %}
+
                             </div>
+  
                         </div>
                     </div>
                 </div>
