--- a/templates/category-option-id.html
+++ b/templates/category-option-id.html
@@ -33,6 +33,7 @@
                                     <h4>BOOKS</h4>
                                     <div class="recent-post">
                                         <!-- start single post -->
+                                        {% if category_id %}
                                         {% for book in category_id  %}
                                         <div class="recent-single-post">
                                             <div class="post-img">
@@ -53,12 +54,14 @@
                                                     <br>
                                                     <span class="comments-type">
                                                         <i class="bi bi-person"></i>
-                                                        <a href="{{book.get_absolute_url}}"> author</a>
+                                                        <a href="{{book.get_absolute_url}}"> {{book.author}}</a>
                                                         </span> |
+                                                        {% if book.get_total_comments %}
                                                     <span class="comments-type">
                                                           <i class="bi bi-chat"></i>
-                                                          <a href="{{book.get_absolute_url}}"> 11 comments</a>
+                                                          <a href="{{book.get_absolute_url}}"> {{book.get_total_comments}} comments</a>
                                                           </span> |
+                                                          {% endif %}
                                                     <span class="date-type">
                                                       <i class="bi bi-calendar"></i> {{book.updated_on}}
                                                     </span>
@@ -71,6 +74,11 @@
                                             </div>
                                         </div>
                                         {% endfor %}
+                                        {% else %}
+                                
+                                        <p> No books in this Category </p>
+                                       
+                                        {% endif %}
                                         <!-- End single post -->
 
 
@@ -105,58 +113,8 @@
                     </div>
                     <!-- End left sidebar -->
                     <!-- Start single blog -->
-                    <div class="col-md-4 col-sm-4 col-xs-12">
-                        <div class="row">
-                            <h4>Latest Uploads</h4>
-                            <div class="col-md-12 col-sm-12 col-xs-12">
-                                <div class="single-blog">
-                                    <div class="single-blog-img">
-                                        <a href="{{latest.get_absolute_url}}">
-                                            {% if latest.cover %}
-                                            <img src="{{latest.cover.url}}" alt="{{latest.title}}">
-                                            {% else %}
-                                            <img src="{% static 'img/background/empty.jfif' %}" alt="No image here">
-                                            
-                                            {% endif %}
-                                        </a>
-                                    </div>
-                                    <div class="blog-meta">
-                                        <span class="comments-type">
-                                        <i class="bi bi-chat"></i>
-                                        <a href="#">11 comments</a>
-                                      </span>
-                                        <span class="date-type">
-                                        <i class="bi bi-calendar"></i>{{latest.updated_on}}
-                                      </span>
-                                    </div>
-                                    <div class="blog-text">
-                                        <h4>
-                                            <a href="#">{{latest.title}}</a>
-                                        </h4>
-                                        <p>
-                                            {{latest.description | slice:200}}...
-                                        </p>
-                                    </div>
-                                    <span>
-                                        <a href="{{latest.get_absolute_url}}" class="ready-btn">Read more</a>
-                                      </span>
-                                </div>
-                            </div>
-                            <!-- End single blog -->
+                    {% include 'paginator.html' %}
 
-
-
-                            <div class="blog-pagination">
-                                <ul class="pagination">
-                                    <li class="page-item"><a href="#" class="page-link">&lt;</a></li>
-                                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                                    <li class="page-item"><a href="#" class="page-link">&gt;</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
