--- a/templates/main.html
+++ b/templates/main.html
@@ -4,15 +4,18 @@
 
 <head>
     <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
 
-    <title>{% block title %}VUNOKLANG{% endblock title %}</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>{% block title %}{{owner.title}}{% endblock title %}</title>
+    <meta name="description" content="{{owner.meta_description}}" >
+    <meta name="keywords" content="{{owner.keywords}}" >
+    <meta name="author" content="{{owner.meta_author}}">
+
 
     <!-- Favicons -->
-    <link href="{% static 'img/logo.jpg'%}" rel="icon">
-    <link href="{% static 'img/logo.jpg'%}" rel="apple-touch-icon">
+    <link href="{{owner.favicon.url}}" rel="icon">
+    <link href="{{owner.favicon.url}}" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700|Raleway:300,400,400i,500,500i,700,800,900" rel="stylesheet">
@@ -44,8 +47,11 @@
         <div class="container d-flex justify-content-between">
 
             <div class="logo d-flex">
-                <a href="{%url 'home'%}"><img src="{% static 'img/logo.jpg'%}" alt="" class="img-fluid"></a>
-                {% comment %} <h1><a href="{%url 'home'%}"><img src="" alt=""><span>  VUNO</span>KLANG</a></h1> {% endcomment %}
+                {% if  owner.logo%}
+                <a href="{%url 'home'%}"><img src="{{owner.logo.url}}" alt="{{owner.title}}" class="img-fluid"></a>
+                {% elif owner.site_description%}
+                <h1><a href="{%url 'home'%}"><img src="{{owner.logo.url}}" alt=""><span></span>{{owner.site_description}}</a></h1>
+                {% endif %}
                 <!-- Uncomment below if you prefer to use an image logo -->
             </div>
 
@@ -54,8 +60,8 @@
 
 
                     <li><a class="" href="#">Sign Up</a></li>
-                    <li><a class="" href="login">Login</a></li>
-                    <li><a class="" href="about">About Us</a></li>
+                    <li><a class="" href="{%url 'login'%}">Login</a></li>
+                    <li><a class="" href="{%url 'about'%}">About Us</a></li>
                     
 
                 </ul>
@@ -81,23 +87,23 @@
                         <div class="footer-content">
                             <div class="footer-head">
                                 <div class="footer-logo">
-                                    <h2><span>VUNO</span>KLANG</h2>
+                                    <h2><span></span>{{owner.footer_title}} </h2>
                                 </div>
 
-                                <p>MULTIDISCIPLINARY JOURNAL OF SCIENCE AND TECHNOLOGYEDUCATION.</p>
+                                <p>{{owner.footer_description}}.</p>
                                 <div class="footer-icons">
                                     <ul>
                                         <li>
-                                            <a href="#"><i class="bi bi-facebook"></i></a>
+                                            <a href="{{owner.facebook}}"><i class="bi bi-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="bi bi-twitter"></i></a>
+                                            <a href="{{owner.Twitter}}"><i class="bi bi-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="bi bi-instagram"></i></a>
+                                            <a href="{{owner.Instagram}}"><i class="bi bi-instagram"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="bi bi-linkedin"></i></a>
+                                            <a href="{{owner.linkedIn}}"><i class="bi bi-linkedin"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -110,12 +116,12 @@
                             <div class="footer-head">
                                 <h4>information</h4>
                                 <p>
-                                    FACULTY OF EDUCATION, MODIBBO ADAMA UNIVERSITY, YOLA..
+                                   {{owner.Address}}..
                                 </p>
                                 <div class="footer-contacts">
-                                    <p><span>Tel:</span><a href="tel:+2347068031933">+234 7068031933</a> </p>
-                                    <p><span>Email:</span><a href="mailto:aaelija@mau.edu.ng"> aaelija@mau.edu.ng</a> </p>
-                                    <p><span>Working Hours:</span> 9am-5pm</p>
+                                    <p><span>Tel:</span><a href="tel:{{owner.Tel}}"> {{owner.Tel}}</a> </p>
+                                    <p><span>Email:</span><a href="mailto:{{owner.Email}}"> {{owner.Email}}</a> </p>
+                                    <p><span>Working Hours:</span> {{owner.Working_hours}}</p>
                                 </div>
                             </div>
                         </div>
@@ -147,16 +153,11 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="copyright text-center">
                             <p>
-                                &copy; Copyright <strong>VUNOKLAN</strong>. All Rights Reserved
+                                &copy; Copyright <strong>{{owner.title}}</strong>. All Rights Reserved
                             </p>
                         </div>
                         <div class="credits">
-                            <!--
-              All the links in the footer should remain intact.
-              You can delete the links only if you purchased the pro version.
-              Licensing information: https://bootstrapmade.com/license/
-              Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
-            -->
+
                             Designed by <a href="https://mysmegearhub.com/" target="_blank">SME Gear</a>
                         </div>
                     </div>
